test(demo-5): integrate e2eTest in the projet